0.9.2 - in development
----------------------

 * qlog: always show location even in the case it runs as ``bzr qlog``.
 * qcommit: don't show entire filename as extension if name started with dot
   (e.g. for .bzrignore files)
 * qdiff: options to filter diff output 
   (to see added/deleted/modified/renamed files in any combination)

0.9.1 - 2008-06-17
----------------------
Maintenance release:

 * qannotate: fixing incompatibility with Python 2.4.x 
   in decoding lines to unicode (#209467)
 * qbrowse->qlog->qdiff: properly lock repository before
   invoking qdiff window (#209875)
 * qconfig no more fails if whoami missed e-mail. (#239534)
 * catching PyQt4 ImportError and show to user explanation
   message instead a traceback. (#240123, #163728)
 * Fix "QPainter::begin: A paint device can only be painted 
   by one painter at a time." warning from Qt (#234965)

Translations was updated; Spanish translation added.
Launchpad Rosetta service no more used for translations.
See "Help translate" section in README.txt for details.

0.9.0 - 2008-03-29
----------------------

 * New commands: qpull, qpush, qbranch
 * New qannotate view
 * Search for author names, revision ids/numbers in qlog
 * Fixed single-file diff of renamed file in qlog
 * Display child revision links in qlog
 * New option for local commit in qcommit
 * Handle empty revision specified in qbrowse
 * Display author names instead of committer names in qbrowse
 * Fixed `qbrowse -rN`
 * Fixed getting of modified files in qlog opened from qbrowse

0.8.0 - 2007-12-08
------------------

 * qannotate:
    * Double clicking history in annotate window should open diff window.
      (Lukáš Lalinský, #148024)
 * qbrowse:
    * Context menu "Show log" now actually works.
      (Alexander Belchenko, Mario del Pozo, #147434)
 * qcat:
    * Show contents of a file in a particular revision.
      (Lukáš Lalinský)
 * qcommit:
    * Ask for confirmation when trying to commit with empty message.